[package]
name = "life"
version = "0.0.0"
authors = ["Louis Quinnell <zioroboco@gmail.com>"]
edition = "2018"

[lib]
path = "./engine/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.33"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"
